# rs-project-voult

./: .env  .env.sample  .gitignore  Cargo.toml  README.md  config.sample.json  docker-compose.yaml
config/: Cargo.toml
config/src/: config_sys.rs  lib.rs
helpers/: Cargo.toml
helpers/src/: lib.rs  telegram_user_data.rs
infrastructure/: Cargo.toml
infrastructure/src/: cache_log_items_sql.rs  cache_log_sql.rs  contractors_sql.rs  lib.rs  projects_sql.rs  users_sql.rs
infrastructure/src/entity/: cache_log.rs  cache_log_items.rs  contractors.rs  mod.rs  prelude.rs  projects.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241025_173018_create_table.rs  m20241102_131508_create_table.rs
service/: Cargo.toml
service/src/: user_service.rs
src/: error.rs  main.rs
src/modules/: mod.rs
src/modules/cache_log/: cache_log_ctrl.rs  cache_log_m.rs  cache_log_r.rs  mod.rs
src/modules/cache_log_items/: cache_log_items_ctrl.rs  cache_log_items_m.rs  cache_log_items_r.rs  mod.rs
src/modules/contractor/: contractor_ctrl.rs  contractor_m.rs  contractor_r.rs  mod.rs
src/modules/project/: mod.rs  project_ctrl.rs  project_m.rs  project_r.rs
src/modules/sample/: sample_m.rs
src/modules/user/: mod.rs  user_ctrl.rs  user_m.rs  user_r.rs
static_files/: Cargo.toml
static_files/src/: lib.rs
system/: Cargo.toml
system/src/: config_sys.rs  ctx_sys.rs  error.rs  error_sys.rs  lib.rs  pg_connect_sys.rs
tglib/: Cargo.toml
tglib/src/: lib.rs  tg_check_hash.rs  tg_user_data.rs
