[package]
name = "rs-web"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [ "infrastructure","system", "migration"]


[dependencies]
dotenv = "0.15.0"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
awc = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
env_logger = "0.11"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
validator = { version = "0.18", features = ["derive"] }
log = "0.4"
derive_more = {version = "1.0.0", features = ["full"]}
once_cell = "1.20.2"


syn = "2.0"
quote = "1.0"

system = { path = "system" }
infrastructure = { path = "infrastructure" }
sea-orm = { version = "1.1.0", features = [ "runtime-tokio-native-tls", "sqlx-postgres", "macros" ] }
