[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
system = { path = "../system" }
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "1.1.0", features = [ "runtime-tokio-native-tls", "sqlx-postgres", "macros" ] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4.38"