[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
sea-orm = { version = "1.1.0", features = [ "runtime-tokio-native-tls", "sqlx-postgres", "macros" ] }
tokio = { version = "1.4.1", features = ["full"] }
log = "0.4"
chrono = "0.4.38"

system = { path = "../system" }