[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
sea-orm = { version = "1.1.0", features = [ "runtime-tokio-native-tls", "sqlx-postgres", "macros" ] }

tglib = {path = "../tglib"}
config = { path = "../config" }
system = { path = "../system" }
infrastructure = { path = "../infrastructure" }