[package]
name = "system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1.4.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
awc = "3.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
async-std = { version = "1", features = ["attributes", "tokio1"] }
env_logger = "0.11"
validator = { version = "0.18", features = ["derive"] }
log = "0.4"
derive_more = {version = "1.0.0", features = ["full"]}
once_cell = "1.20.2"
sea-orm = { version = "1.1.0", features = [ "runtime-tokio-native-tls", "sqlx-postgres", "macros" ] }

helpers = { path = "../helpers" }
config = { path = "../config" }
tglib = {path = "../tglib"}